# app/blueprints/users/schemas.py
@@ -3,6 +3,7 @@ from marshmallow import fields
 
 class UserSchema(ma.Schema):
     id = fields.Int(dump_only=True)
+    username = fields.String(required=True)
     email = fields.Email(required=True)
     password = fields.String(required=True, load_only=True)
     
